--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "language-blade",
   "version": "0.0.0",
   "description": "language-blade",
+  "repository": "https://github.com/jawee/language-blade",
   "engines": {
     "atom": ">0.50.0"
   }
