--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "language-blade",
   "version": "0.2.0",
-  "description": "language-blade",
+  "description": "Syntax highlighter for the blade templating engine used in laravel",
   "repository": "https://github.com/jawee/language-blade",
   "engines": {
     "atom": ">0.50.0"
